# gigaxity-deep-research

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md  SECURITY.md  SKILL.md  docker-compose.yml  pyproject.toml  pytest.ini  run_mcp.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
companions/: README.md
companions/brightdata-fallback/: README.md  env.example  mcp_server.py  requirements.txt
companions/exa-answer/: README.md  env.example  mcp_server.py
companions/gptr-mcp/: CUSTOM_RETRIEVERS.md  README.md  env.example  install.sh
companions/searxng/: README.md  docker-compose.yml  settings.yml.example
docs/: contributing.md  introduction.md  quickstart.md  troubleshooting.md
docs/concepts/: architecture.md  fallback-chains.md  focus-modes.md  presets.md
docs/guides/: free-tier-strategy.md  setup-companions.md  setup-local-inference.md  setup-mcp.md  setup-rest.md  triple-stack-setup.md
docs/reference/: configuration.md  mcp-configs.md  mcp-tools.md  rest-api.md
scripts/: audit_synthesis_callers.py  deploy.sh  run_tests.sh  test_local.py
skills/: README.md
skills/research-workflow/: SKILL.md
src/: __init__.py  config.py  llm_client.py  llm_utils.py  main.py  mcp_server.py
src/api/: __init__.py  routes.py  schemas.py
tests/: __init__.py  conftest.py  test_a1_evidence_gated_rescue.py  test_a2_scorer_hardening.py  test_aggregator.py  test_api.py  test_audit_synthesis_callers.py  test_cache.py  test_codex_items_6_7_cleanup.py  test_codex_t1_fixes.py  test_codex_t5_citation_extraction.py  test_codex_t7_v022_fixes.py  test_codex_t8_v030_citation_unification.py  test_connectors.py  test_contradiction_budget.py  test_e2e.py  test_enhanced_endpoints.py  test_entity_extraction_precision.py  test_finalization.py  test_fusion.py  test_gate_fail_open.py  test_llm_utils.py  test_output_cleanup.py  test_p0_enhancements.py  test_p1_enhancements.py  test_performance.py  test_q1_heuristic_dedilution.py  test_q2_gate_focus.py  test_q3_scorer_provenance.py  test_rcs_budget.py  test_rcs_concurrency.py  test_synthesis.py  test_verifier_surface_variant.py  test_verifier_uppercase_framing.py  test_wrappers.py
(+49 files in other folders)
